# scrapper_catalog

./: .env.sample  .flake8  README.md  main.py  pyproject.toml
data/: catalog.html  catalog.xlsx  wb_catalog.xlsx  wildberries.html
src/: config_db.py  convert_to_xlsx.py  pars_wb.py  scrapper_wb.py
tests/: test_convert_to_xlsx.py
