[project]
name = "wb-parcer"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "selenium (>=4.39.0,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "fake-useragent (>=2.2.0,<3.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "selenium-stealth (>=1.0.6,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pyshorteners (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.12.0"
flake8 = "^7.3.0"


[tool.poetry.group.logging.dependencies]
logger = "^1.4"


[tool.poetry.group.log.dependencies]
logging = "^0.4.9.6"

